--- a/src/app/angular/ng-if/ng-if.component.html
+++ b/src/app/angular/ng-if/ng-if.component.html
@@ -1,5 +1,4 @@
-
-
+<!-- ngif -->
 <div class="container mt-5">
     <button class="btn btn-success my-3 fw-bold" (click)="oncreateblock()">create block</button><br>
     <div *ngIf="isvalid; then thenblock  else elseblock"></div>
@@ -9,7 +8,7 @@
     </ng-template>
     <!-- else block is time show gy jb condition false ho gy -->
     <ng-template #elseblock>
-        <div #elseblock class="w-25 rounded bg-light text-center text-success fw-bold p-3">No block has been created yet</div>
+        <div #elseblock class="w-25 rounded bg-light text-center text-success fw-bold p-3">No block has been created yet
+        </div>
     </ng-template>
-    
 </div>
