--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,7 @@
 <router-outlet></router-outlet> -->
 <!-- <app-ng-if></app-ng-if> -->
  <!-- <app-ng-switch></app-ng-switch> -->
-  <app-ng-for></app-ng-for>
+  <!-- <app-ng-for></app-ng-for> -->
+   <!-- <app-string-interpolation></app-string-interpolation> -->
+    <!-- <app-event-binding></app-event-binding> -->
+     <app-template-refrence></app-template-refrence>
