--- a/src/app/angular/about/about.component.html
+++ b/src/app/angular/about/about.component.html
@@ -1,10 +1,78 @@
-
-
-
-<div class="container mt-4"> 
+<div class="container mt-4 text-center bg-light">
     <div class="text-center p-3">
         <h4 class="text-dark">About</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet harum necessitatibus dolor sequi illum ipsum, porro rem blanditiis eaque, quas animi a. In soluta ratione non repellat culpa, reiciendis quo.</p>
+        <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet harum necessitatibus dolor
+            sequi illum ipsum, porro rem blanditiis eaque, quas animi a. In soluta ratione non repellat culpa,
+            reiciendis quo.</p>
     </div>
-    <app-ng-for></app-ng-for>
+
+
+
+    <!-- pipe ik just angular ka feature ha -->
+    <!-- use -->
+    <!-- we can use pipe to transform our output in template -->
+
+     {{value | uppercase}}<br>
+      {{value | lowercase}}<br>
+      {{value | titlecase}}<br>
+      <!-- date -->
+    <!-- {{date | date : 'short'}}<br>
+      {{date | date : 'medium'}}<br>
+      {{date | date : 'shortTime' }}<br>
+      {{date | date : 'long'}}<br>  -->
+
+
+
+
+    <!-- custom pipe -->
+
+    {{value | uxpipe: 8}}<br>
+    <!-- <ul>
+        <li *ngFor="let name of nameArr">
+            {{name | uxpipe:8}}
+        </li>
+      </ul> -->
+
+    <!-- filter -->
+
+    <div class="row mt-5  justify-content-center">
+        <!-- pure pipe jb b koi pipe hmra data transform karta ha tb angular is pipe ko execute karta ha
+       pure pipe is time execute hota ha jb koi pure change hota ha pipe ki input value ma its means that pure
+       pipe purrely foucus karta ha ka kb koi chage detect ho rah ha
+        impure pipe is tim execute hota ha jb b koi change detect hota ha angular app ma impure pipe every chage pa
+        execute hota rhata ha  -->
+        <div class="col-md-8">
+            <div class="form-inline d-flex mb-2">
+                <input type="text" placeholder="Add Product" #add class="form-control w-50">
+                <button class="btn btn-success btn-sm mx-2" (click)="onAddProduct(add)">Add product</button>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="mb-3">
+                <input type="email" class="form-control" placeholder="Search Product by name" [(ngModel)]="namesearch">
+            </div>
+        </div>
+        <div class="col-md-8">
+            <table class="table">
+                <thead class="table table-dark">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Product Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Availabilty</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let product of productArr | filter : namesearch">
+                        <th>{{product.sno}}</th>
+                        <td>{{product.name}}</td>
+                        <td>{{product.price}}</td>
+                        <td>{{product.available}}</td>
+                    </tr>
+                    <tr>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
+</div>
