--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,9 @@
         <a class="nav-link" routerLinkActive="active" routerLink="contact">Contact</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="contact-us">contact-us</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" routerLink="prodcut">Prodcut</a>
       </li>
       <li class="nav-item">
