--- a/src/app/angular/contact-us/contact-us.component.css
+++ b/src/app/angular/contact-us/contact-us.component.css
@@ -2,3 +2,15 @@ input.ng-touched.ng-invalid{
     border: 2px solid red;
     box-shadow: 0px 0px 13px inset rgb(250, 23, 23);
 }
+.myRecForm.INVALID{
+    border: 2px solid red;
+    box-shadow: 0px 0px 13px inset rgb(250, 23, 23) !important;  
+}
+.myRecForm.VALID{
+    border: 2px solid green;
+    box-shadow: 0px 0px 13px inset rgb(3, 165, 3) !important;  
+}
+.myRecForm.PENDING{
+    border: 2px solid yellow;
+    box-shadow: 0px 0px 13px inset rgb(196, 196, 3) !important;  
+}
