--- a/src/app/angular/contact-us/contact-us.component.html
+++ b/src/app/angular/contact-us/contact-us.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-    <div class="col-md-6 bg-white text-left py-3 rounded shadow">
+    <div class="col-md-6 bg-white text-left py-3 rounded shadow myRecForm" [ngClass]="formStatus">
         <form [formGroup]="myReactiveforms" (ngSubmit)="onSubmit()">
             <div formGroupName="userdetail">
             <div class="form-group p-3">
