--- a/src/app/angular/home/home.component.html
+++ b/src/app/angular/home/home.component.html
@@ -1,9 +1,22 @@
-
-
-
-<div class="container bg-light mt-4"> 
-<div class="text-center p-3">
-    <h4 class="text-dark ">Home</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet harum necessitatibus dolor sequi illum ipsum, porro rem blanditiis eaque, quas animi a. In soluta ratione non repellat culpa, reiciendis quo.</p>
+<div class="container bg-light mt-4">
+    <div class="text-center p-3">
+        <h4 class="text-dark ">Home</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet harum necessitatibus dolor sequi illum
+            ipsum, porro rem blanditiis eaque, quas animi a. In soluta ratione non repellat culpa, reiciendis quo.</p>
+    </div>
+    <div class="text-center">
+        <ng-container *ngIf="statusOnline">
+            <div *ngFor="let proitem of products">
+                {{proitem.name}}
+            </div>
+        </ng-container>
+    </div>
 </div>
+
+<div class="text-center">
+    <div *ngIf="statusOnline">
+        <div *ngFor="let proitem of products">
+            {{proitem.name}}
+        </div>
+    </div>
 </div>
