--- a/src/app/angular/contact/contact.component.html
+++ b/src/app/angular/contact/contact.component.html
@@ -1,8 +1,35 @@
 
 
-<div class="container mt-4 text-white"> 
+<div class="container mt-4bg-light"> 
     <div class="text-center p-3">
-        <h4 class="text-dark text-white">Contact</h4>
+        <h4 class="text-center">Contact</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet harum necessitatibus dolor sequi illum ipsum, porro rem blanditiis eaque, quas animi a. In soluta ratione non repellat culpa, reiciendis quo.</p>
     </div>
+    <div class="row">
+        <div class="col-md-6">
+            <app-card>
+                <h5 class="card-title">Laptop</h5>
+                <a href="#" class="btn btn-primary">Know More about Laptop</a>
+            </app-card>
+        </div>
+        <div class="col-md-6">
+            <app-card>
+                <h5 class="card-title">Mobile</h5>
+                <a href="#" class="btn btn-primary">Know More about Mobile</a>
+            </app-card>
+        </div>
+        <div class="col-md-6">
+            <app-card>
+                <h5 class="card-title">TV</h5>
+                <a href="#" class="btn btn-primary">Know More about Tv</a>
+            </app-card>
+        </div>
+        <div class="col-md-6">
+            <app-card>
+                <h5 class="card-title">Watch</h5>
+                <a href="#" class="btn btn-primary">Know More about Watch</a>
+            </app-card>
+        </div>
+    </div>
+    
     </div>
