--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,6 +61,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" routerLink="post-api">post</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="buy-product">buy-product</a>
+      </li>
     </ul>
   </nav>
     <router-outlet></router-outlet>
