--- a/src/app/angular/contact/contact.component.html
+++ b/src/app/angular/contact/contact.component.html
@@ -1,11 +1,11 @@
 
 
-<div class="container mt-4bg-light"> 
+<div class=" container mt-4 bg-light"> 
     <div class="text-center p-3">
         <h4 class="text-center">Contact</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet harum necessitatibus dolor sequi illum ipsum, porro rem blanditiis eaque, quas animi a. In soluta ratione non repellat culpa, reiciendis quo.</p>
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-md-6">
             <app-card>
                 <h5 class="card-title">Laptop</h5>
@@ -30,6 +30,19 @@
                 <a href="#" class="btn btn-primary">Know More about Watch</a>
             </app-card>
         </div>
-    </div>
+    </div> -->
     
+
+    <div class="row">
+
+        <div class="col-md-6">
+            <!-- card -->
+             <app-card-2></app-card-2>
+        </div>
+        <div class="col-md-6">
+            <!-- card -->
+             <app-card-1></app-card-1>
+        </div>
+ 
+    </div>
     </div>
