--- a/src/app/angular/card-2/card-2.component.html
+++ b/src/app/angular/card-2/card-2.component.html
@@ -1,9 +1,9 @@
 
-<div class="card shadow rounded border-0 text-center">
-<div class="card-body">
+<div class="card shadow rounded border-0">
+<div class="card-body text-left">
   <ng-container *ngFor="let product of Products">
- Product name: <strong class="text-success">{{product.name}}</strong> &nbsp; &nbsp;
-  Product id : <strong class="text-success">{{product.id}}</strong><br>
+ Product name: &nbsp; &nbsp;<strong class="text-success">{{product.name}}</strong> &nbsp; &nbsp;
+  Product id : &nbsp; &nbsp;<strong class="text-success">{{product.id}}</strong><br>
 </ng-container>
   </div>
 </div>
