--- a/src/app/angular/home/home.component.html
+++ b/src/app/angular/home/home.component.html
@@ -4,7 +4,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet harum necessitatibus dolor sequi illum
             ipsum, porro rem blanditiis eaque, quas animi a. In soluta ratione non repellat culpa, reiciendis quo.</p>
     </div>
-    <div class="text-center">
+    <!-- <div class="text-center">
         <ng-container *ngIf="statusOnline">
             <div *ngFor="let proitem of products">
                 {{proitem.name}}
@@ -12,11 +12,27 @@
         </ng-container>
     </div>
 </div>
-
 <div class="text-center">
     <div *ngIf="statusOnline">
         <div *ngFor="let proitem of products">
             {{proitem.name}}
         </div>
+    </div> -->
+
+
+    <div class="row">
+        <div class="col-md-6">
+            <app-comp-1></app-comp-1>
+        </div>
+        <div class="col-md-6">
+            <app-comp-2></app-comp-2>
+        </div>
+        <div class="col-md-6">
+            <app-comp-3></app-comp-3>
+        </div>
+        <div class="col-md-6">
+            <app-comp-4></app-comp-4>
+        </div>
+
     </div>
 </div>
