--- a/src/app/angular/card-1/card-1.component.html
+++ b/src/app/angular/card-1/card-1.component.html
@@ -1,7 +1,29 @@
-<div class="card shadow rounded border-0 text-center">
+<!-- <div class="card shadow rounded border-0 text-center">
     <div class="card-body">
         <h5 class="card-title">Laptop</h5>
         <p class="card-text">Some quick example text to build on the card title and make.</p>
         <button (click)="btnclick()" class="btn btn-success">Newsletter Subscribe</button>
     </div>
-</div>
+</div> -->
+
+<!-- @ViewChild is a decorator in Angular used to access a child component,
+  directive, or DOM element from the parent component's class. 
+  It allows you to manipulate or interact with the elements directly from the TypeScript code -->
+
+<!-- <div class="container">
+    <div #box>
+        <h5 class="text-center p-4 rounded mt-3">username is : <strong>{{username}}</strong></h5>
+    </div>
+    <div class="row">
+        <div class="col-md-6 mt-3">
+
+            <button (click)="Changechildproperty()" class="btn btn-success mx-2">Change child property</button>
+            <button (click)="CallChildMethod()" class="btn btn-success mx-2">Call child Method</button>
+        </div>
+        <div class="col-md-6">
+            <app-comp-2>
+                <p #childcontent>This is ng content paragraph</p><br>
+            </app-comp-2>
+        </div>
+    </div>
+</div> -->
