--- a/src/app/angular/comp-2/comp-2.component.html
+++ b/src/app/angular/comp-2/comp-2.component.html
@@ -1,8 +1,10 @@
 
-<div class="card  bg-blue-100 p-3 mt-3 border-0">
+<div class="card p-3 mt-3 border-0" appTestdirective>
     <div class="card-body text-center">
         <h5 class="card-title">Username : {{username}}</h5>
-        <input type="text" placeholder="Update Name" class="p-1" #uname>
-        <button class="p-1 rounded-0" (click)="updateUserName(uname)">Update</button>
+        <button class="btn btn-success mx-2" (click)="clickMe()">click me</button>
+        <button class="btn btn-success mx-2" (click)="changeColor('yellow')">yellow</button>
+        <button class="btn btn-success mx-2" (click)="changeColor('green')">green</button><br>
+        <ng-content></ng-content>
       </div>
     </div>
