--- a/src/app/angular/prodcut/prodcut.component.html
+++ b/src/app/angular/prodcut/prodcut.component.html
@@ -12,7 +12,7 @@
         <div class="col-md-8">
 
 
-              <div class="card" style="width: 19rem;">
+              <div class="card" style="width: 19rem;" appTestdirective>
                 <img src="../../../assets/cup of coffee.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -20,7 +20,7 @@
                   <a routerLink="laptop" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-              <div class="card mx-3" style="width: 19rem;">
+              <div class="card mx-3" style="width: 19rem;" appTestdirective>
                 <img src="../../../assets/images.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
