--- a/src/app/angular/about/about.component.html
+++ b/src/app/angular/about/about.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-4 text-center bg-light">
-    <div class="text-center p-3">
+    <!-- <div class="text-center p-3">
         <h4 class="text-dark">About</h4>
         <input type="text" placeholder="text here" #val>
         <button class="p-1" (click)="SubmitValue(val)">Submit Value</button>
         <app-comp-1 *ngIf="CompExist" [myValue]="Value">Ng content : {{Value}}</app-comp-1><br><br>
         <button class="btn btn-danger" (click)="ondestroy()">Submit Value</button>
-    </div>
+    </div> -->
 
 
 
