--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,6 +64,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" routerLink="buy-product">buy-product</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="card-1">View child</a>
+      </li>
     </ul>
   </nav>
     <router-outlet></router-outlet>
