--- a/src/app/angular/home/home.component.html
+++ b/src/app/angular/home/home.component.html
@@ -12,6 +12,18 @@
     
                 <button (click)="Changechildproperty()" class="btn btn-success mx-2">Change child property</button>
                 <button (click)="CallChildMethod()" class="btn btn-success mx-2">Call child Method</button>
+               <div class="custom-dropdown">
+                <span class="dropdown-header" appDropdown>
+                    My Dropdown
+                </span>
+                <div class="dropdown-content">
+                    <a href="#">Item 1</a>
+                    <a href="#">Item 2</a>
+                    <a href="#">Item 3</a>
+                </div>
+
+               </div>
+            
             </div>
             <div class="col-md-6">
                 <app-comp-2>
