--- a/src/app/angular/contact/contact.component.css
+++ b/src/app/angular/contact/contact.component.css
@@ -1,3 +1,5 @@
-.container{
-    height: 400px;
+input.ng-invalid.ng-touched,
+select.ng-invalid.ng-touched {
+    border: 2px solid red;
+    box-shadow: 0px 0px 13px inset rgb(250, 23, 23);
 }
