--- a/src/app/angular/contact/contact.component.html
+++ b/src/app/angular/contact/contact.component.html
@@ -1,9 +1,8 @@
-
-
-<div class=" container mt-4 bg-light"> 
+<div class=" container mt-4 bg-light">
     <div class="text-center p-3">
         <h4 class="text-center">Contact</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet harum necessitatibus dolor sequi illum ipsum, porro rem blanditiis eaque, quas animi a. In soluta ratione non repellat culpa, reiciendis quo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet harum necessitatibus dolor sequi illum
+            ipsum, porro rem blanditiis eaque, quas animi a. In soluta ratione non repellat culpa, reiciendis quo.</p>
     </div>
     <!-- <div class="row">
         <div class="col-md-6">
@@ -31,18 +30,103 @@
             </app-card>
         </div>
     </div> -->
-    
 
-    <div class="row">
 
+    <!-- <div class="row">
         <div class="col-md-6">
-            <!-- card -->
+            card 
              <app-card-2></app-card-2>
         </div>
         <div class="col-md-6">
-            <!-- card -->
+             card 
              <app-card-1></app-card-1>
         </div>
  
+    </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="row justify-content-center">
+        <div class="col-md-6 bg-white rounded shadow text-left py-4">
+            <form (ngSubmit)="onsubmit(myForm)" #myForm="ngForm">
+                <div ngModelGroup="userDetail" #userDetail="ngModelGroup">
+                    <div class="mb-4 form-group">
+                        <label for="username">Enter username</label>
+                        <input type="text" class="form-control my-2" name="username" id="username"
+                            placeholder="Enter user" [(ngModel)]="username" required>
+                        <small class="text-danger" *ngIf="username">Your User Name is {{username}}</small>
+                        <button class="btn btn-primary btn-sm " (click)="setUsername()">Set Username</button>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email">Enter Email</label>
+                        <input type="email" class="form-control my-2" name="email" placeholder="Enter Email" ngModel
+                            required email #email="ngModel">
+                        <small *ngIf="!email.valid && email.touched" class="text-danger">Please Enter Valid
+                            Email</small>
+                    </div>
+                    <small class="text-danger" *ngIf="!userDetail.valid && userDetail.touched">Please Enter Valid
+                        Detail</small>
+                </div>
+                <div class="mb-4 form-check p-0">
+                    <label for="course">Course</label>
+                    <select class="form-control my-2" id="course" name="course" [ngModel]="defaultvalue" required>
+                        <option value="Html">Html</option>
+                        <option value="Angular">Angular</option>
+                        <option value="Css">CSS</option>
+                    </select>
+                </div>
+                <div class="form-group" *ngFor="let gender of genders">
+                    <input class="form-check-input mx-2" type="radio"
+                    [ngModel]="defaultgender" value="{{gender.value}}" name="gender"
+                     id="{{gender.id}}">
+                    <label class="form-check-label" for="{{gender.id}}">
+                      {{gender.value}}
+                    </label>
+                  </div>
+                <button type="submit" class="btn btn-success" [disabled]="!myForm.valid">Submit</button>
+            </form>
+        </div>
     </div>
+
+    <div class="row justify-content-center mt-3">
+        <div class="col-md-6 bg-white rounded shadow py-3 text-left" *ngIf="Submitted">
+            <h2>Form data</h2>
+            <p>Username : <strong>{{formData.username}}</strong></p>
+            <p>Email : <strong>{{formData.email}}</strong></p>
+            <p>Course : <strong>{{formData.course}}</strong></p>
+            <p>Gender : <strong>{{formData.gender}}</strong></p>
+
+        </div>
+
     </div>
+
+
+
+
+
+
+
+
+
+</div>
