--- a/src/app/angular/dropdown/dropdown.component.html
+++ b/src/app/angular/dropdown/dropdown.component.html
@@ -17,7 +17,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a routerLink="laptop" class="btn btn-primary">Go somewhere</a>
+                  <a routerLink="laptop-page" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
               <div class="card mx-3" style="width: 19rem;" appTestdirective>
@@ -25,10 +25,10 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a routerLink="television" class="btn btn-primary">Go somewhere</a>
+                  <a routerLink="mobile-page" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-              <div class="card mt-3" style="width: 19rem;">
+              <!-- <div class="card mt-3" style="width: 19rem;">
                 <img src="../../../assets/imgage - Copy.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -43,12 +43,11 @@
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a routerLink="watch" class="btn btn-primary">Go somewhere</a>
                 </div>
-              </div>
+              </div> -->
         </div>
 
         <div class="col-md-4 border-start h-50">
-            <!-- <router-outlet></router-outlet> -->
+            <router-outlet></router-outlet>
         </div>
     </div>
     </div>
- 
