--- a/src/app/angular/service/about-page/about-page.component.html
+++ b/src/app/angular/service/about-page/about-page.component.html
@@ -1,6 +1,9 @@
 
-<div class="text-center m-3 p-4 text-dark">
-    <h5>Laptop</h5>
-    <img src="../../../assets/cup of coffee.jpg" alt="">
+
+
+<div class="text-center m-3 p-4">
+    <h5>Television</h5>
+    <img src="../../../assets/images.webp" alt="">
     <p class="mt-3 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint saepe laudantium totam repellat incidunt excepturi alias aperiam repellendus amet quas itaque dolore tempore perferendis, impedit, veniam dicta. Qui, sunt earum?</p>
 </div>
+
