--- a/src/app/angular/service/service.component.html
+++ b/src/app/angular/service/service.component.html
@@ -1,5 +1,6 @@
 
 
+
 <div class="container mt-4 bg-light"> 
     <div class="text-center p-3">
         <h4 class="text-dark text-white">Product</h4>
@@ -17,7 +18,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a routerLink="laptop" class="btn btn-primary">Go somewhere</a>
+                  <a routerLink="hoem-page" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
               <div class="card mx-3" style="width: 19rem;" appTestdirective>
@@ -25,7 +26,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a routerLink="television" class="btn btn-primary">Go somewhere</a>
+                  <a routerLink="about-page" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
               <div class="card mt-3" style="width: 19rem;">
@@ -33,7 +34,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a routerLink="mobile" class="btn btn-primary">Go somewhere</a>
+                  <a routerLink="contact-2" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
               <div class="card mx-3 mt-3" style="width: 19rem;">
@@ -41,13 +42,13 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a routerLink="watch" class="btn btn-primary">Go somewhere</a>
+                  <a routerLink="blog" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
         </div>
 
         <div class="col-md-4 border-start h-50">
-            <!-- <router-outlet></router-outlet> -->
+            <router-outlet></router-outlet>
         </div>
     </div>
     </div>
