--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,34 +38,37 @@
   <nav class="navbar bg-light">
      <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="home">Home</a>
+        <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="about">About</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="contact">Contact</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/contact">Contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="contact-us">contact-us</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/contact-us">contact-us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="prodcut">Prodcut</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/prodcut">Prodcut</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="page-not-found">Page not found</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/service">service</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="get">get-api</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="dropdown">dropdown page</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="post-api">post</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/page-not-found">Page not found</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="buy-product">buy-product</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/get">get-api</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="card-1">View child</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/post-api">post</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/buy-product">buy-product</a>
       </li>
     </ul>
   </nav>
