--- a/src/app/angular/dropdown/laptop-page/laptop-page.component.html
+++ b/src/app/angular/dropdown/laptop-page/laptop-page.component.html
@@ -4,3 +4,15 @@
     <img src="../../../assets/cup of coffee.jpg" alt="">
     <p class="mt-3 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint saepe laudantium totam repellat incidunt excepturi alias aperiam repellendus amet quas itaque dolore tempore perferendis, impedit, veniam dicta. Qui, sunt earum?</p>
 </div>
+
+<div class="custom-dropdown">
+    <span class="dropdown-header" appDropdown>
+        My Dropdown
+    </span>
+    <div class="dropdown-content">
+        <a href="#">Item 1</a>
+        <a href="#">Item 2</a>
+        <a href="#">Item 3</a>
+    </div>
+
+   </div>
