--- a/src/app/angular/service/contact-2/contact-2.component.html
+++ b/src/app/angular/service/contact-2/contact-2.component.html
@@ -1,6 +1,7 @@
 
-<div class="text-center m-3 p-4 text-dark">
-    <h5>Laptop</h5>
-    <img src="../../../assets/cup of coffee.jpg" alt="">
+<div class="text-center m-3 p-4">
+    <h5>Mobile</h5>
+    <img src="../../../assets/imgage - Copy.jpg" alt="">
     <p class="mt-3 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint saepe laudantium totam repellat incidunt excepturi alias aperiam repellendus amet quas itaque dolore tempore perferendis, impedit, veniam dicta. Qui, sunt earum?</p>
 </div>
+
