--- a/src/app/angular/dropdown/dropdown.component.html
+++ b/src/app/angular/dropdown/dropdown.component.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="col-md-4 border-start h-50">
-            <router-outlet></router-outlet>
+            <!-- <router-outlet></router-outlet> -->
         </div>
     </div>
     </div>
