--- a/src/app/angular/home/home.component.html
+++ b/src/app/angular/home/home.component.html
@@ -26,9 +26,9 @@
             
             </div>
             <div class="col-md-6">
-                <app-comp-2>
+                <!-- <app-comp-2>
                     <p #childcontent>This is ng content paragraph</p><br>
-                </app-comp-2>
+                </app-comp-2> -->
             </div>
         </div>
     </div>
